WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 116344
Ads on theverge.com cause repaints when hovered, even though content doesn't visibly change.
https://bugs.webkit.org/show_bug.cgi?id=116344
Summary
Ads on theverge.com cause repaints when hovered, even though content doesn't ...
Andreas Kling
Reported
2013-05-17 13:04:27 PDT
There's a :hover selector that changes the outline value, but the both before/after computed style has non-visible outlines. We should be smart enough to know that there's no repaint necessary.
Attachments
Proposed patch
(3.22 KB, patch)
2013-05-17 13:05 PDT
,
Andreas Kling
darin
: review+
Details
Formatted Diff
Diff
Latch for panding
(3.22 KB, patch)
2013-05-17 14:05 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-05-17 13:05:11 PDT
Created
attachment 202140
[details]
Proposed patch
Andreas Kling
Comment 2
2013-05-17 14:05:00 PDT
Created
attachment 202155
[details]
Latch for panding
WebKit Commit Bot
Comment 3
2013-05-17 19:54:58 PDT
The commit-queue encountered the following flaky tests while processing
attachment 202155
[details]
: svg/batik/text/textLength.svg
bug 116329
(authors:
darin@apple.com
and
zimmermann@kde.org
) svg/batik/text/textPosition.svg
bug 116328
(authors:
darin@apple.com
and
zimmermann@kde.org
) svg/batik/paints/patternRegions.svg
bug 116380
(author:
zimmermann@kde.org
) media/track/track-remove-crash.html
bug 115892
(author:
eric.carlson@apple.com
) fast/js/post-message-numeric-property.html
bug 116381
(author:
fpizlo@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2013-05-17 19:55:49 PDT
Comment on
attachment 202155
[details]
Latch for panding Clearing flags on attachment: 202155 Committed
r150318
: <
http://trac.webkit.org/changeset/150318
>
WebKit Commit Bot
Comment 5
2013-05-17 19:55:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug